--- a/app/index.html
+++ b/app/index.html
@@ -15,11 +15,11 @@
  <div class="menu-list">
  <ul>
   <li><a>Details</a></li>
-  <li><a>Top Teams</a></li>
-  <li><a>Top Scorers</a></li>
-  <li><a>Most Apperance</a></li>
+  <li><a>Teams</a></li>
+  <li><a>Scorers</a></li>
+  <li><a>Appearance</a></li>
   <li><a>Database</a></li>
-  <li><a>Team Management</a></li>
+  <li><a>Management</a></li>
  </ul>
  </div>
 </div>
