All pages has div

--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
  <ul>
   <li><a href="#/">Details</a></li>
   <li><a href="#/team_list">Teams</a></li>
-  <li><a href="#/team_scorers">Scorers</a></li>
+  <li><a href="#/top_scorers">Scorers</a></li>
   <li><a href="#/most_app">Appearance</a></li>
   <li><a href="#/">Database</a></li>
   <li><a href="#/">Management</a></li>
